Tidy up for Java 17